# exspy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  changes.html  citing.html  contributing.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  releasing_guide.md  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docs.yml  integration_tests.yml  package_and_test.yml  release.yml  tests.yml
_downloads/037b5aa4752b41748abf69bba9d1cbe4/: EELS_curve_fitting.ipynb
_downloads/1db7adc309576f84ed92b6afba01e80a/: fourier_ratio_deconvolution.ipynb
_downloads/51b6cb3a1b662f000cfb9fc6ac651224/: find_EDS_lines.ipynb
_downloads/69bdc85ebd69e2f59cf1c9a4af0e6b89/: find_EDS_lines.py
_downloads/80fda92f1a4c28614ff7f2dc29229b45/: EELS_database.ipynb
_downloads/86765c53e9a284bd44b7eb1be67baf6e/: EELS_curve_fitting.py
_downloads/971c2906ad663020c2e6701928a24c9a/: plot_residual.ipynb
_downloads/9fccdf8a75923677d25708442159bb9b/: simple_arctan_fit.ipynb
_sources/: citing.rst.txt  intro.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt
_sources/auto_examples/EDS/: find_EDS_lines.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/EELS/: EELS_database.rst.txt  fourier_ratio_deconvolution.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/model_fitting/: EELS_curve_fitting.rst.txt  index.rst.txt  plot_residual.rst.txt  sg_execution_times.rst.txt  simple_arctan_fit.rst.txt
_sources/reference/: index.rst.txt  material.rst.txt
_sources/user_guide/: bibliography.rst.txt  eds.rst.txt  eels.rst.txt  index.rst.txt  install.rst.txt
auto_examples/: index.html  sg_execution_times.html
auto_examples/EDS/: find_EDS_lines.html  index.html  sg_execution_times.html
auto_examples/EELS/: EELS_database.html  fourier_ratio_deconvolution.html  index.html  sg_execution_times.html
auto_examples/model_fitting/: EELS_curve_fitting.html  index.html  plot_residual.html  sg_execution_times.html  simple_arctan_fit.html
doc/: Makefile  citing.rst  conf.py  index.rst  intro.rst  make.bat
doc/reference/: components.rst  exspy.rst  index.rst  material.rst  utils.eds.rst  utils.eels.rst  utils.rst
doc/user_guide/: eds.rst  eels.rst  install.rst  metadata_structure.rst
examples/EDS/: README.rst
examples/EELS/: EELS_database.py  README.rst  fourier_ratio_deconvolution.py
examples/STEM_EDS/: STEM_EDS_weld_interface_phases.ipynb
examples/model_fitting/: EELS_curve_fitting.py  plot_residual.py
exspy/: __init__.py  __init__.pyi  _defaults_parser.py  _signal_tools.py  _utils.py  _version.py  conftest.py  hyperspy_extension.yaml  material.py  signal_tools.py
exspy/_docstrings/: eds.py  model.py
exspy/_misc/: __init__.py  _elements.py  elements.py  elements.pyi  elements_general_properties.json  material.py
exspy/_misc/eds/: __init__.pyi  ffast_mac.py  utils.py  xray_lines.json  xraydb_utils.py
exspy/_misc/eels/: __init__.py  __init__.pyi  base_gos.py  dielectric.py  eels_binding_energies.json  eelsdb.py  effective_angle.py  electron_inelastic_mean_free_path.py  gosh_gos.py  gosh_gos_source.py  gosh_source.py  hartree_slater_gos.py  hydrogenic_gos.py  tools.py
exspy/components/: __init__.py  __init__.pyi  _eels_arctan.py  _eels_cl_edge.py  _eels_double_power_law.py  _eels_vignetting.py  _pes_core_line_shape.py  _pes_see.py  _pes_voigt.py  _volume_plasmon_drude.py  eels_arctan.py  eels_cl_edge.py  eels_double_power_law.py  eels_vignetting.py  pes_core_line_shape.py  pes_see.py  pes_voigt.py  volume_plasmon_drude.py
exspy/data/: __init__.py  __init__.pyi  _eds.py  _eels.py  _eelsdb.py
exspy/docstrings/: model.py
exspy/material/: __init__.py  __init__.pyi  _elements.py  _material.py  elements_general_properties.json  xray_lines.json
exspy/misc/: __init__.py  elements.py  material.py
exspy/misc/eds/: eds.py  utils.py
exspy/misc/eels/: __init__.py  base_gos.py  dirac_gos.py  eelsdb.py  effective_angle.py  electron_inelastic_mean_free_path.py  gosh_gos.py  hartree_slater_gos.py  hydrogenic_gos.py  tools.py
exspy/models/: __init__.py  __init__.pyi  edsmodel.py  edssemmodel.py  edstemmodel.py  eelsmodel.py
exspy/signals/: __init__.py  __init__.pyi  _dielectric_function.py  _eds.py  _eds_sem.py  _eds_tem.py  _eels.py  _lazy_dielectric_function.py  _lazy_eds.py  _lazy_eds_sem.py  _lazy_eds_tem.py  _lazy_eels.py  dielectric_function.py  eds.py  eds_sem.py  eds_tem.py  eels.py  fib_sims.py  sims.py
exspy/test/components/: test_double_power_law.py  test_pes_core_line_shape.py  test_pes_voigt.py
exspy/test/data/: test_data.py
exspy/test/drawing/: test_plot_model.py  test_plot_spectra_markers.py
exspy/test/misc/: test_eds_utils.py
exspy/test/models/: test_edsmodel.py  (+1 more)
exspy/tests/: conftest.py  test_deprecated_import.py  test_eager_import.py  test_non-uniform_not-implemented.py
exspy/utils/: __init__.py  eds.py  eels.py
hyperspy/_signals/: holography_image.py
reference/: components.html  data.html  exspy.html  index.html  material.html  models.html  signals.html  utils.eds.html  utils.eels.html  utils.html
upcoming_changes/: 106.maintenance.rst  108.maintenance.rst  109.maintenance.rst  125.enhancements.rst  126.enhancements.rst  128.maintenance.rst  129.doc.rst  134.maintenance.rst  14.maintenance.rst  150.new.rst  151.doc.rst  156.maintenance.rst  159.maintenance.rst  160.enhancements.rst  162.new.rst  164.maintenance.rst  167.new.rst  174.doc.rst  22.doc.rst  27.maintenance.rst  32.bugfix.rst  33.maintenance.rst  38.doc.rst  55.bugfix.rst  55.doc.rst  59.bugfix.rst  59.doc.rst  66.bugfix.rst  72.new.rst  76.bugfix.rst  80.enhancements.rst  86.bugfix.rst  87.enhancements.rst  90.bugfix.rst  README.rst
user_guide/: bibliography.html  dielectric_function.html  eds.html  eels.html  index.html  install.html  metadata_structure.html
(+46 files in other folders)
