[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exspy"
description = "EELS and EDS analysis with the HyperSpy framework"
requires-python = ">=3.8"
readme = "README.md"
keywords=[
    "python",
    "hyperspy",
    "data analysis",
    "microscopy",
    "electron microscopy",
    "electron energy loss spectroscopy",
    "energy-dispersive X-ray spectroscopy",
    "X-ray energy-dispersive spectroscopy",
    "EELS",
    "EDS",
    "EDX",
    "SEM",
    "STEM",
    "TEM",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "dask[array]",
  "hyperspy>=2.0rc0",
  "matplotlib",
  "numpy",
  "pint",
  "pooch",
  "prettytable",
  "requests",
  "scipy",
  "traits",
]
dynamic = ["version"]

[project.entry-points."hyperspy.extensions"]
exspy = "exspy"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
"gui-jupyter" = ["hyperspy_gui_ipywidgets>=2.0"]
"gui-traitsui" = ["hyperspy_gui_traitsui>=2.0"]
"doc" = [
  "numpydoc",
  "pydata-sphinx-theme>=0.13",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-favicon",
  "sphinx-gallery",
  "sphinxcontrib-towncrier",
  # unpin when sphinxcontrib-towncrier support more recent version to towncrier
  "towncrier<24",
]
"speed" = ["numexpr"]
"tests" = [
  "pytest     >= 5.0",
  "pytest-mpl",
  "pytest-cov >= 2.8.1",
  "pytest-xdist",
  "setuptools-scm",
]
"dev" = ["ruff"]
"all" = [
  "exspy[gui-jupyter]",
  "exspy[gui-traitsui]",
  "exspy[speed]"
]

[project.urls]
"Homepage" = "https://hyperspy.org/exspy"
"Bug Reports" = "https://github.com/hyperspy/exspy/issues"
"Source" = "https://github.com/hyperspy/exspy"

[tool.black]
force-exclude = '''
  exspy/misc/eds/ffast_mac.py
  | exspy/misc/elements.py
'''

[tool.coverage.run]
branch = true
source = ["hyperspy"]
omit = [
  "hyperspy/tests/*",
  "prepare_release.py",
  ]

[tool.coverage.report]
precision = 2

[tool.pytest.ini_options]
addopts = "-ra -n auto --dist loadfile"
testpaths = ["exspy/tests", ]

[tool.setuptools.packages.find]
include = ["exspy*"]
# Excluding rsciio.tests.data folder is done in MANIFEST.in
# because setuptools doesn't support it in pyproject.toml

[tool.setuptools.package-data]
"*" = [
  "*hspy",
  "*.yaml",
  "*.msa",
  ]

[tool.setuptools_scm]
# Presence enables setuptools_scm, the version will be determine at build time from git
# The version will be updated by the `prepare_release.py` script
fallback_version = "0.4.dev0"

[tool.towncrier]
directory = "upcoming_changes/"
filename = "CHANGES.rst"
issue_format = "`#{issue} <https://github.com/hyperspy/exspy/issues/{issue}>`_"
title_format = "{version} ({project_date})"
package_dir = "exspy"
type = [
    { directory = "new", name = "New features", showcontent = true },
    { directory = "enhancements", name = "Enhancements", showcontent = true },
    { directory = "bugfix", name = "Bug Fixes", showcontent = true },
    { directory = "api", name = "API changes", showcontent = true },
    { directory = "deprecation", name = "Deprecations", showcontent = true },
    { directory = "doc", name = "Improved Documentation", showcontent = true },
    { directory = "maintenance", name = "Maintenance", showcontent = true },
]
